# FileStag

./: AGENTS.md  CLAUDE.md  README.md  README_PYPI.md  pyproject.toml
docs/: README_template.md
filestag/: __init__.py  file_sink.py  file_source.py  file_stag.py
filestag/azure/: __init__.py  source.py
filestag/cache/: disk_cache.py
filestag/sources/: disk.py  zip.py
filestag/web/: __init__.py  fetch.py  web_cache.py
scripts/: build.sh  build_readme.py  deploy_pypi.sh  test_wheel.sh
tests/: __init__.py  conftest.py  test_async.py  test_azure.py  test_cache.py  test_env.py  test_file_path.py  test_file_sink.py  test_file_source.py  test_file_stag.py  test_init.py  test_iter.py  test_lock.py  test_memory_zip.py  test_protocols.py  test_shared_archive.py  test_sinks.py  test_sources.py  test_web.py
